Modified string comparison to prevent exceptions if service pid has no dots. Modified the getObjectValue to prevent exceptions with properties with cardinality = 0 that have no default.
Signed-off-by: MMaiero <matteo.maiero@eurotech.com>